[package]
name = "sdi12"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust library for the SDI-12 communication protocol"
repository = "https://github.com/rileyleff/sdi12-rs"
readme = "README.md"
keywords = ["sdi12", "embedded", "no-std", "sensors", "datalogger"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
crc = { version = "3.2.1", default-features = false }
nb = "1.1.0"
# thiserror is now a mandatory dependency
# default-features = false ensures its 'std' feature is off by default
thiserror = { version = ">1.0", default-features = false }

# Add heapless later if needed for no-std collections
# heapless = { version = "0.8", optional = true }

# For embedded-hal support later
# embedded-hal = { version = "1.0.0", optional = true }
# embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = [] # no_std by default

# Core features
alloc = []
std = ["alloc", "thiserror/std"]
async = ["dep:embedded-hal-async"] # async requires embedded-hal-async

# Implementation Strategy Features (choose one or more when using the library)
impl-native = ["dep:embedded-hal"] # Native impl requires embedded-hal traits
impl-generic-hal = ["dep:embedded-hal"] # Generic HAL impl also uses embedded-hal
impl-bitbang = ["dep:embedded-hal"] # Bitbang likely needs digital/delay traits from embedded-hal

# Optional: HAL-Specific Native Adapters (Examples)
# impl-adapter-stm32 = ["impl-native", "stm32f4xx-hal"] # Example, needs actual hal dep added too
# impl-adapter-rp2040 = ["impl-native", "rp2040-hal"] # Example

# Note: The async versions of impl-native, impl-generic-hal, impl-bitbang
# would likely also depend on the "async" feature itself.