[package]
name = "sdi12"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust library for the SDI-12 communication protocol"
repository = "https://github.com/rileyleff/sdi12-rs"
readme = "README.md"
keywords = ["sdi12", "embedded", "no-std", "sensors", "datalogger"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
crc = { version = "3.2.1", default-features = false }
nb = "1.1.0"

# arrayvec is needed for command formatting, make it non-optional
arrayvec = { version = "0.7.6", default-features = false } # Use 0.7.x, ensure no_std

# Heapless is optional for main library, maybe used for alloc alternatives
heapless = { version = "0.8", optional = true } # Make optional

# For embedded-hal support later
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
thiserror = { version = "2.0.12", default-features = false }


[dev-dependencies]
# Heapless is needed for tests that check formatting errors
heapless = { version = "0.8" }


[features]
default = [] # no_std by default

# Core features
# Decide if 'alloc' enables 'heapless' use cases within the library, or if they are separate.
# Option 1: alloc enables alloc crate directly
alloc = []
# Option 2: Feature to specifically enable heapless-based alternatives
use_heapless = ["dep:heapless"]
# Option 3: alloc feature also enables heapless (simpler if heapless is the primary no_std collection)
# alloc = ["dep:heapless"]

std = ["alloc", "thiserror/std"] # std usually implies alloc
async = ["dep:embedded-hal-async"] # async requires embedded-hal-async

# Implementation Strategy Features (choose one or more when using the library)
impl-native = ["dep:embedded-hal"] # Native impl requires embedded-hal traits
impl-generic-hal = ["dep:embedded-hal"] # Generic HAL impl also uses embedded-hal
impl-bitbang = ["dep:embedded-hal"] # Bitbang likely needs digital/delay traits from embedded-hal

# Optional: HAL-Specific Native Adapters (Examples)
# impl-adapter-stm32 = ["impl-native", "stm32f4xx-hal"] # Example, needs actual hal dep added too
# impl-adapter-rp2040 = ["impl-native", "rp2040-hal"] # Example

# Note: The async versions of impl-native, impl-generic-hal, impl-bitbang
# would likely also depend on the "async" feature itself.